discussion/kv_engine/175104/175104_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: RangeScan continue using mcbp

Add mcbp validator/executor so that an existing RangeScan can be
continued.

A RangeScan continue is a bit different to other mcbp commands.

1) A single continue request may trigger many response packets, with
each response carrying a payload containing many keys or keys/values.
See range_scan_continue.md for a description of the payload format.

2) The RangeScan I/O task (AUXIO) is writing 'directly' to the
connection. This is different to the usual ewould_block pattern
as we don't bring data into memory and then trigger a worker thread
to copy that memory out. Note that the continue request does not
use out-of-order (a simplification of the functionality) and the
connection cannot process any more commands, even whilst waiting
for the AUXIO task to pickup the continue task.

Change-Id: I3dcd0c8445190bb1f313d2b2746779bff7ff3cbf

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-06-07 14:09:03.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-06-07 14:12:55.000000000
Message: 
Patch Set 10:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-06-07 14:16:16.000000000
Message: 
Patch Set 10:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-07 14:16:49.000000000
Message: 
Patch Set 10: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46645/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc(29): error C2065: "buffer": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46645/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17961/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:29:9: error: unknown type name "buffer" [clang-diagnostic-error]
    if (buffer.size() >= 8192) {
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:29:9: error: use of undeclared identifier "buffer"; did you mean "fmt::detail::buffer"? [clang-diagnostic-error]
    if (buffer.size() >= 8192) {
        ^~~~~~
        fmt::detail::buffer
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:778:29: note: "fmt::detail::buffer" declared here
template <typename T> class buffer {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:29:15: error: cannot use dot operator on a type [clang-diagnostic-error]
    if (buffer.size() >= 8192) {
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:41:48: error: use of undeclared identifier "buffer" [clang-diagnostic-error]
                {reinterpret_cast<const char*>(buffer.data()), buffer.size()});
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:41:64: error: use of undeclared identifier "buffer" [clang-diagnostic-error]
                {reinterpret_cast<const char*>(buffer.data()), buffer.size()});
                                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:43:5: error: unknown type name "buffer" [clang-diagnostic-error]
    buffer.clear();
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:43:5: error: use of undeclared identifier "buffer"; did you mean "fmt::detail::buffer"? [clang-diagnostic-error]
    buffer.clear();
    ^~~~~~
    fmt::detail::buffer
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:778:29: note: "fmt::detail::buffer" declared here
template <typename T> class buffer {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:43:11: error: cannot use dot operator on a type [clang-diagnostic-error]
    buffer.clear();
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:47:61: error: use of undeclared identifier "buffer" [clang-diagnostic-error]
    cb::mcbp::response::RangeScanContinueKeyPayload::encode(buffer, key);
                                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:54:13: error: use of undeclared identifier "buffer" [clang-diagnostic-error]
            buffer, item->toItemInfo(0, false));
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17961/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:29:9:
error: unknown type name "buffer" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17961/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39203/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:29:9:
error: use of undeclared identifier "buffer"; did you mean "fmt::detail::buffer"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39203/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7617/ : FAILURE

Compile error at [2022-06-07T14:12:25.350Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:29:9:
error: use of undeclared identifier "buffer"; did you mean "fmt::detail::buffer"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7617/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18991/ : FAILURE

Compile error at [2022-06-07T14:13:12.825Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:29:9:
error: use of undeclared identifier "buffer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18991/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19796/ : FAILURE

Compile error at [2022-06-07T14:11:46.387Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:29:9:
error: ?buffer? was not declared in this scope; did you mean ?setbuffer??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19796/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20143/ : FAILURE

Compile error at [2022-06-07T14:12:03.088Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:29:9:
error: ?buffer? was not declared in this scope; did you mean ?setbuffer??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20143/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20799/ : FAILURE

Compile error at [2022-06-07T14:10:37.558Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:29:9:
error: use of undeclared identifier "buffer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20799/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28189/ : FAILURE

Compile error at [2022-06-07T14:10:41.410Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:29:9:
error: use of undeclared identifier "buffer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28189/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7721/ : FAILURE

Compile error at [2022-06-07T14:14:21.307Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:29:9:
error: ?buffer? was not declared in this scope; did you mean ?setbuffer??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7721/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17015/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
